--- a/backend/web/views/shared/layout.html
+++ b/backend/web/views/shared/layout.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="/assets/img/logo-fav.png">
-    <title>Beagle</title>
+    <title>Go</title>
     <link rel="stylesheet" type="text/css" href="/assets/lib/perfect-scrollbar/css/perfect-scrollbar.min.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/lib/material-design-icons/css/material-design-iconic-font.min.css"/><!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -19,7 +19,7 @@
 <div class="be-wrapper am-fixed-sidebar">
     <nav class="navbar navbar-default navbar-fixed-top be-top-header">
         <div class="container-fluid">
-            <div  ><a href="index.html" class="navbar-brand">慕课网 GO秒杀系统后台</a>
+            <div  ><a href="index.html" class="navbar-brand">GO秒杀系统后台</a>
             </div>
             <div class="be-right-navbar">
                 <ul class="nav navbar-nav navbar-right be-user-nav">
